Fix: cards not showing

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ p {
   text-align: center;
 }
 
-.playing-cards {
+.playingCards {
   display: flex;
   justify-content: center;
 }
